<resources>
    <string name="app_name">AnchorBooks</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="subtitle">Subtitle</string>
    <string name="title_book">Title Book</string>
    <string name="rank">Rank</string>
    <string name="port">port</string>
    <string name="years1">AÑO</string>
    <string name="country">Country</string>
    <string name="title2">Titulo</string>
    <string name="textview">TextView</string>
    <string name="lenguaje">Lenguaje</string>
    <string name="portada">portada</string>
    <string name="img">Img</string>
    <string name="years">Years</string>
    <string name="positivo">Positivo</string>
    <string name="pais">PAIS</string>
    <string name="a_o">AÑO</string>
    <string name="lenguaje2">LENGUAJE</string>
    <string name="delivery">DELIVERY</string>
    <string name="buy">Buy</string>
    <string name="price">Price</string>

    <string name="des">Con despacho</string>
    <string name="Sin">Sin despacho.</string>
    <string name="paginas">paginas</string>
    <string name="precio">Precio</string>

    <string name="Consulta">Consulta por libro</string>
    <string name="text_mail"> Hola Vi El Libro </string>
    <string name="text_mail_parte2">   y me gustaria que me contactara este correo _________ al siguiente numero _____________ quedo atento</string>
    <string name="volver">Volver</string>
</resources>