<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginBottom="428dp"
            android:background="#FBF25D"
            app:layout_constraintEnd_toStartOf="@+id/title_details"
            app:layout_constraintStart_toStartOf="@+id/title_details">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="0dp"
                android:layout_height="231dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="55dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/title_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imagePortada"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/img"
                    tools:src="@tools:sample/avatars" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/title_details"
                android:layout_width="194dp"
                android:layout_height="35dp"
                android:layout_marginStart="206dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="17dp"
                android:layout_marginBottom="244dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/textview"
                android:textColor="#050505"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pages_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="257dp"
                android:layout_marginEnd="305dp"
                android:layout_marginBottom="30dp"
                android:text="@string/textview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pages_details2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="107dp"
                android:layout_marginTop="257dp"
                android:layout_marginEnd="255dp"
                android:layout_marginBottom="29dp"
                android:text="@string/paginas"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/author_details"
                android:layout_width="187dp"
                android:layout_height="23dp"
                android:layout_marginStart="206dp"
                android:layout_marginTop="61dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="221dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/textview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="189dp"
                android:layout_height="45dp"
                android:layout_marginStart="181dp"
                android:layout_marginTop="212dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/email"
                android:layout_width="127dp"
                android:layout_height="40dp"
                android:layout_marginStart="272dp"
                android:layout_marginTop="257dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="8dp"
                android:text="Contactar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="94dp"
                android:layout_height="122dp"
                android:layout_marginStart="203dp"
                android:layout_marginTop="86dp"
                android:layout_marginEnd="114dp"
                android:layout_marginBottom="99dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView4"
                    style="@android:style/Widget.Material.TextView.SpinnerItem"
                    android:layout_width="89dp"
                    android:layout_height="30dp"
                    android:fontFamily="@font/aclonica"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/pais"
                    android:textColor="#2B2828"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView8"
                    style="@android:style/Widget.Material.TextView.SpinnerItem"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:fontFamily="@font/aclonica"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/a_o"
                    android:textColor="#2B2828"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView5"
                    style="@android:style/Widget.Material.TextView.SpinnerItem"
                    android:layout_width="wrap_content"
                    android:layout_height="31dp"
                    android:fontFamily="@font/aclonica"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/lenguaje2"
                    android:textColor="#2B2828"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView9"
                    style="@android:style/Widget.Material.TextView.SpinnerItem"
                    android:layout_width="wrap_content"
                    android:layout_height="31dp"
                    android:fontFamily="@font/aclonica"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/delivery"
                    android:textColor="#2B2828"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="106dp"
                android:layout_height="126dp"
                android:layout_marginStart="301dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="93dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/linearLayout2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/text_pais"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:fontFamily="@font/abril_fatface"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/country"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/text_year"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:fontFamily="@font/abril_fatface"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/years"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_lenguaje"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:fontFamily="@font/abril_fatface"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/lenguaje"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/text_deli"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:fontFamily="@font/abril_fatface"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/positivo"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_precio"
                android:layout_width="83dp"
                android:layout_height="23dp"
                android:layout_marginStart="189dp"
                android:layout_marginTop="274dp"
                android:layout_marginEnd="139dp"
                android:layout_marginBottom="10dp"
                android:text="@string/price"
                android:textColor="#050505"
                android:textColorHighlight="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Precio"
                android:layout_width="78dp"
                android:layout_height="19dp"
                android:layout_marginStart="189dp"
                android:layout_marginTop="257dp"
                android:layout_marginEnd="144dp"
                android:layout_marginBottom="31dp"
                android:text="@string/precio"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

    <WebView
        android:id="@+id/webView"
        android:layout_width="400dp"
        android:layout_height="328dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="326dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="41dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="299dp"
        android:layout_marginTop="627dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="56dp"
        android:text="@string/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>