<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="175dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="386dp"
        android:layout_height="159dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="395dp"
            android:layout_height="166dp">

            <TextView
                android:id="@+id/text_subtitle"
                android:layout_width="224dp"
                android:layout_height="29dp"
                android:layout_marginStart="128dp"
                android:layout_marginTop="51dp"
                android:layout_marginEnd="43dp"
                android:layout_marginBottom="86dp"
                android:text="@string/subtitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="244dp"
                android:layout_height="27dp"
                android:layout_marginStart="128dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="23dp"
                android:layout_marginBottom="123dp"
                android:text="@string/title_book"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="99dp"
                android:layout_marginEnd="179dp"
                android:layout_marginBottom="35dp"
                android:contentDescription="@string/rank"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.42"
                app:layout_constraintStart_toEndOf="@+id/cardView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@android:drawable/btn_star_big_on" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="115dp"
                android:layout_height="159dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="280dp"
                android:layout_marginBottom="6dp"
                app:cardBackgroundColor="#E6E5E5"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/portada_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/port"
                    tools:srcCompat="@tools:sample/avatars" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>